# prog1_univr

SO/SistemiOperativi/: CMakeLists.txt  Makefile  common.h
SO/SistemiOperativi/client/: client.c  client.h  main_client.c
SO/SistemiOperativi/server/: main_server.c  server.c  server.h
funzioni/: square  square.c
funzioni/rand/: rand  rand.c
funzioni/ricorsione/fattorial/: fattoriale  fattoriale.c
funzioni/ricorsione/fattorial/fibonacci/: fibonacci  fibonacci.c
funzioni/var/: varType  varType.c
